--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "shopify-buy": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
