--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_API_KEY="ecc0f1a180f1c9572ab76cdbf7d10b44"
 VITE_SECRET_KEY="dd1cbf4efa798712a5f4375fc8381824"
 
 VITE_SHOPIFY_STORE_URL="https://i2rcfs-yf.myshopify.com/api/2024-10/graphql.json"
+VITE_PAGE_URL="https://6r7lv1rckb.execute-api.us-east-1.amazonaws.com/dev"
