--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
     "axios": "^1.7.7",
+    "embla-carousel-react": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
     "shopify-buy": "^2.22.0"
   },
